--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -155,8 +155,7 @@
         "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "        !wget --no-check-certificate $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
         "    else: \n",
-        "        !apt -y install -qq aria2 \n",
-        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion {model_url}\n",
+        "        !wget $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/{model_name}.safetensors\n",
         "    \n",
         "install(model_url)\n"
       ]
