Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -151,12 +151,12 @@
         "    elif model_url.startswith(\"https://huggingface.co/\"):\n",
         "        if \"/blob/\" in model_url:\n",
         "            model_url = model_url.replace(\"/blob/\", \"/resolve/\")\n",
-        "        huggingface_token = \"\" \n",
+        "        huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
         "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "        !wget --no-check-certificate $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
-        "    else: \n",
+        "        !wget --no-check-certificate --header={user_header} $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "    else:\n",
         "        !wget $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/{model_name}.safetensors\n",
-        "    \n",
+        " \n",
         "install(model_url)\n"
       ]
     },
