--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -130,9 +130,20 @@
         "vae_url = url_dict.get(vae_name)\n",
         "\n",
         "def install(model_url, vae_url):\n",
+        "\n",
         "    if model_url :\n",
         "        base_name = os.path.basename(model_url)\n",
-        "        !wget $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "        if model_url.startswith(\"https://drive.google.com\"):\n",
+        "            os.chdir(pretrained_model)\n",
+        "            !gdown --fuzzy {model_url}\n",
+        "        elif model_url.startswith(\"https://huggingface.co/\"):\n",
+        "            if \"/blob/\" in model_url:\n",
+        "                model_url = model_url.replace(\"/blob/\", \"/resolve/\")\n",
+        "            huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
+        "            user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "            !wget --no-check-certificate --header={user_header} $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "        else:\n",
+        "            !wget $model_url -O /content/stable-diffusion-webui/models/Stable-diffusion/{model_name}.safetensors\n",
         "    if vae_url :\n",
         "        base_name = os.path.basename(vae_url)\n",
         "        !wget $vae_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
