Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -63,6 +63,7 @@
         "  !wget https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/control_seg-fp16.safetensors -O /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_seg-fp16.safetensors\n",
         "\n",
         "%cd /content/stable-diffusion-webui\n",
+        "\n",
         "#EasyNegative\n",
         "!wget https://huggingface.co/datasets/gsdf/EasyNegative/resolve/main/EasyNegative.pt -O /content/stable-diffusion-webui/embeddings/EasyNegative.pt\n",
         "\n",
@@ -166,7 +167,7 @@
         "#@title 3.VAE\n",
         "#@markdown VAEを選択してから実行してください。\n",
         "\n",
-        "vae_name = \"orangemix.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name = \"kl-f8-anime2\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
@@ -175,12 +176,13 @@
         "    \"kl-f8-anime2\": \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt\",\n",
         "    \"Anything-V3.0.vae.pt\": \"https://huggingface.co/ckpt/anything-v3.0/resolve/main/Anything-V3.0.vae.pt\",\n",
         "    \"autoencoder_fix_kl-f8-trinart_characters\": \"https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/autoencoder_fix_kl-f8-trinart_characters.ckpt\",\n",
-        "    \"orangemix.vae.pt\": \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt\",\n",
+        "    \"orangemix\": \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt\",\n",
         "}\n",
         "\n",
         "vae_url = url_dict.get(vae_name)\n",
         "\n",
         "def install(vae_url):\n",
+        "    base_name = os.path.basename(vae_url)\n",
         "    if vae_url.startswith(\"https://drive.google.com\"):\n",
         "        os.chdir(pretrained_model)\n",
         "        !gdown --fuzzy {vae_url}\n",
@@ -189,9 +191,9 @@
         "            vae_url = vae_url.replace(\"/blob/\", \"/resolve/\")\n",
         "        huggingface_token = \"\" \n",
         "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "        !wget --no-check-certificate $vae_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "        !wget $vae_url -O /content/stable-diffusion-webui/models/Stable-diffusion/{vae_name}.vae.pt\n",
         "    else: \n",
-        "        !wget $vae_url -O /content/stable-diffusion-webui/models/Stable-diffusion/$base_name\n",
+        "        !wget $vae_url -O /content/stable-diffusion-webui/models/Stable-diffusion/{vae_name}.vae.pt\n",
         "\n",
         "install(vae_url)"
       ],
@@ -206,7 +208,7 @@
       "cell_type": "code",
       "source": [
         "#@title カスタムモデル(任意)\n",
-        "\n",
+        " #@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
         "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
@@ -248,7 +250,7 @@
         "\n",
         "  install(modelUrl)\n",
         "\n",
-        "#@markdown ▼driveからファイルをコピーする場合、ファイルパスを入力してください。\n",
+        "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://qiita.com/tsubasagit/items/65dd78682d34f5f2098c)を入力してください。\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
