Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -127,7 +127,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"7th_anime_v3_A\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"ChilloutMix\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -174,7 +174,7 @@
         "    \"Graham_Special\":\"https://huggingface.co/Graham-san/Graham_Special/resolve/main/Graham%20Special%20v1.ckpt\",\n",
         "    \"BalorV2featAbyssOrange2\":\"https://huggingface.co/ploughB660/Balor-V2/resolve/main/BalorV2featAbyssOrange2.safetensors\",\n",
         "    \"Balor-V2.5featAOM3A3\":\"https://huggingface.co/ploughB660/Balor-V3/resolve/main/Balor-V2.5featAOM3A3.safetensors\",\n",
-        "    \"ChilloutMix\":\"https://civitai.com/api/download/mods/11745\",\n",
+        "    \"ChilloutMix\":\"https://civitai.com/api/download/models/11745\",\n",
         "    \"wd-1-5-beta2\":\"https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-aesthetic-fp16.safetensors\",\n",
         "}\n",
         "\n",
@@ -182,11 +182,20 @@
         "\n",
         "def install(model_url):\n",
         "    base_name = os.path.basename(model_url)\n",
-        "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $model_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
         "\n",
-        "install(model_url)\n",
+        "    if model_url.startswith(\"https://drive.google.com\"):\n",
+        "        os.chdir(pretrained_model)\n",
+        "        !gdown --fuzzy {model_url}\n",
+        "    elif model_url.startswith(\"https://huggingface.co/\"):\n",
+        "        if \"/blob/\" in model_url:\n",
+        "            model_url = model_url.replace(\"/blob/\", \"/resolve/\")\n",
+        "        huggingface_token = \"\" \n",
+        "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name} {model_url}\n",
+        "    else:\n",
+        "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion {model_url}\n",
         "\n",
-        " "
+        "install(model_url)"
       ]
     },
     {
@@ -209,7 +218,7 @@
         "\n",
         "def install(vae_url):\n",
         "    base_name = os.path.basename(vae_url)\n",
-        "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
+        "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o {vae_name}.vae.pt\n",
         "\n",
         "install(vae_url)\n"
       ],
@@ -224,7 +233,7 @@
       "cell_type": "code",
       "source": [
         "#@title カスタムモデル(任意)\n",
-        "\n",
+        " #@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
         "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
@@ -266,7 +275,7 @@
         "\n",
         "  install(modelUrl)\n",
         "\n",
-        "#@markdown ▼driveからファイルをコピーする場合、ファイルパスを入力してください。\n",
+        "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://qiita.com/tsubasagit/items/65dd78682d34f5f2098c)を入力してください。\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
