Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -250,7 +250,7 @@
         "\n",
         "  install(modelUrl)\n",
         "\n",
-        "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://qiita.com/tsubasagit/items/65dd78682d34f5f2098c)を入力してください。\n",
+        "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://qiita.com/tsubasagit/items/65dd78682d34f5f2098c)を入力してください。ファイルが見つからない場合はスキップされます。\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
