Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -90,7 +90,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"ChilloutMix\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"7th_anime_v3_A\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\", \"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's 7th Heaven Mix\", \"Corneo's Shinra26 Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -167,7 +167,7 @@
         "#@title 3.VAE\n",
         "#@markdown VAEを選択してから実行してください。\n",
         "\n",
-        "vae_name = \"kl-f8-anime2\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix\"] {allow-input: false}\n",
+        "vae_name = \"orangemix\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
@@ -346,15 +346,15 @@
         "def install(Lora_url, Textual_url, Lycoris_url):\n",
         "    if Lora_url:\n",
         "        base_name = os.path.basename(Lora_url)\n",
-        "        !wget {Lora_url} -O /content/stable-diffusion-webui/models/Stable-diffusion/{base_name} \n",
+        "        !wget {Lora_url} -O /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/{base_name} \n",
         "     \n",
         "    if Textual_url :\n",
         "        base_name = os.path.basename(Textual_url)\n",
-        "        !wget {Textual_url} -O /content/stable-diffusion-webui/models/Stable-diffusion/{base_name} \n",
+        "        !wget {Textual_url} -O /content/stable-diffusion-webui/embeddings/{base_name} \n",
         "\n",
         "    if Lycoris_url :\n",
         "        base_name = os.path.basename(Lycoris_url)\n",
-        "        !wget {Lycoris_url} -O /content/stable-diffusion-webui/models/Stable-diffusion/{base_name} \n",
+        "        !wget {Lycoris_url} -O /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora/{base_name} \n",
         "\t\t\t\t\t\t\n",
         "install(Lora_url, Textual_url,Lycoris_url)"
       ],
