Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -182,7 +182,7 @@
         "\n",
         "def install(model_url):\n",
         "    base_name = os.path.basename(model_url)\n",
-        "\n",
+        "    \n",
         "    if model_url.startswith(\"https://drive.google.com\"):\n",
         "        os.chdir(pretrained_model)\n",
         "        !gdown --fuzzy {model_url}\n",
@@ -275,7 +275,7 @@
         "\n",
         "  install(modelUrl)\n",
         "\n",
-        "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://qiita.com/tsubasagit/items/65dd78682d34f5f2098c)を入力してください。\n",
+        "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://qiita.com/tsubasagit/items/65dd78682d34f5f2098c)を入力してください。ファイルが見つからない場合はスキップされます。\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
@@ -371,13 +371,13 @@
         "def install(Lora_url, Textual_url,Lycoris_url):\n",
         "    if Lora_url :\n",
         "        base_name = os.path.basename(Lora_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $model_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name     \n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $model_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $base_name     \n",
         "    if Textual_url :\n",
         "        base_name = os.path.basename(Textual_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d //content/stable-diffusion-webui/embeddings -o $base_name\n",
         "    if Lycoris_url :\n",
         "        base_name = os.path.basename(Lycoris_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/models/Stable-diffusion -o $base_name\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $base_name\n",
         "\n",
         "install(Lora_url, Textual_url,Lycoris_url)"
       ],
