Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -202,16 +202,16 @@
       "cell_type": "code",
       "source": [
         "#@title 3.VAE\n",
-        "vae_name = \"orangemix.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name = \"orangemix\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
         "    \"vae-ft-mse-560000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-ema-original/resolve/main/vae-ft-ema-560000-ema-pruned.ckpt\",\n",
         "    \"kl-f8-anime\": \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime.ckpt\",\n",
         "    \"kl-f8-anime2\": \"https://huggingface.co/hakurei/waifu-diffusion-v1-4/resolve/main/vae/kl-f8-anime2.ckpt\",\n",
-        "    \"Anything-V3.0.vae.pt\": \"https://huggingface.co/ckpt/anything-v3.0/resolve/main/Anything-V3.0.vae.pt\",\n",
+        "    \"Anything-V3.0\": \"https://huggingface.co/ckpt/anything-v3.0/resolve/main/Anything-V3.0.vae.pt\",\n",
         "    \"autoencoder_fix_kl-f8-trinart_characters\": \"https://huggingface.co/naclbit/trinart_characters_19.2m_stable_diffusion_v1/resolve/main/autoencoder_fix_kl-f8-trinart_characters.ckpt\",\n",
-        "    \"orangemix.vae.pt\": \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt\",\n",
+        "    \"orangemix\": \"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/VAEs/orangemix.vae.pt\",\n",
         "}\n",
         "\n",
         "vae_url = url_dict.get(vae_name)\n",
@@ -251,6 +251,8 @@
         "elif model_type == \"Wildcards\":\n",
         "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
+        "elif model_type == \"VAE\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "\n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
         " \n",
@@ -371,13 +373,13 @@
         "def install(Lora_url, Textual_url,Lycoris_url):\n",
         "    if Lora_url :\n",
         "        base_name = os.path.basename(Lora_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $model_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $base_name     \n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Lora_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $base_name     \n",
         "    if Textual_url :\n",
         "        base_name = os.path.basename(Textual_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d //content/stable-diffusion-webui/embeddings -o $base_name\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Textual_url -d //content/stable-diffusion-webui/embeddings -o $base_name\n",
         "    if Lycoris_url :\n",
         "        base_name = os.path.basename(Lycoris_url)\n",
-        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $vae_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $base_name\n",
+        "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M $Lycoris_url -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o $base_name\n",
         "\n",
         "install(Lora_url, Textual_url,Lycoris_url)"
       ],
