Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -234,7 +234,7 @@
       "source": [
         "#@title カスタムモデル(任意)\n",
         " #@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
-        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\"] {allow-input: false}\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type ==\"Texual_Inversion\":\n",
