Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -209,7 +209,7 @@
       "source": [
         "#@title カスタムモデル(任意)\n",
         " #@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
-        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\"] {allow-input: false}\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\",\"VAE\"] {allow-input: false}\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type ==\"Texual_Inversion\":\n",
@@ -226,7 +226,9 @@
         "elif model_type == \"Wildcards\":\n",
         "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
-        "    \n",
+        "elif model_type == \"VAE\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "\n",
         "modelUrl = \"\"  # @param {'type': 'string'}\n",
         " \n",
         "if modelUrl == \"\":\n",
@@ -250,7 +252,7 @@
         "\n",
         "  install(modelUrl)\n",
         "\n",
-        "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://qiita.com/tsubasagit/items/65dd78682d34f5f2098c#%E3%83%95%E3%82%A1%E3%82%A4%E3%83%AB%E3%83%91%E3%82%B9%E3%82%92%E8%AA%BF%E3%81%B9%E3%82%8B)を入力してください。ファイルが見つからない場合はスキップされます。\n",
+        "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://camo.qiitausercontent.com/76671e92e7da4f86f522fcb372fb49db27fa805b/68747470733a2f2f71696974612d696d6167652d73746f72652e73332e61702d6e6f727468656173742d312e616d617a6f6e6177732e636f6d2f302f3533333834342f66623462326238382d383938302d373932362d353063632d3063613830386137343334642e706e67)を入力してください。ファイルが見つからない場合はスキップされます。\n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
