Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -61,7 +61,7 @@
         "#@title  2.モデル選択とWebUIの起動 \n",
         "#@markdown モデル選択とVAEを選択してから実行してください。\n",
         "                                \n",
-        "model_name =\"AbyssOrangeMix2\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis Anime Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat Diffusion v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic Vision V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo's 7th Heaven Mix\",\"ChilloutMix\",\"wd-1-5-beta2\"] {allow-input: false}\n",
+        "model_name =\"AbyssOrangeMix2\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo's 7th_Heaven Mix\",\"ChilloutMix\",\"wd-1-5-beta2\"] {allow-input: false}\n",
         "\n",
         "import os\n",
         "\n",
@@ -79,14 +79,14 @@
         "    \"AbyssOrangeMix2\":\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/AbyssOrangeMix2/AbyssOrangeMix2_nsfw.safetensors\",\n",
         "    \"EerieOrangeMix2\":\"https://huggingface.co/WarriorMama777/OrangeMixs/resolve/main/Models/EerieOrangeMix/EerieOrangeMix2.safetensors\",\n",
         "    \"trinart2_step115000\":\"https://huggingface.co/naclbit/trinart_stable_diffusion_v2/resolve/main/trinart2_step115000.ckpt\",\n",
-        "    \"EimisAnimeDiffusion_1.0v\":\"https://huggingface.co/eimiss/EimisAnimeDiffusion_1.0v/resolve/main/EimisAnimeDiffusion_1-0v.ckpt\",\n",
+        "    \"Eimis_Anime_Diffusion_1.0v\":\"https://huggingface.co/eimiss/EimisAnimeDiffusion_1.0v/resolve/main/EimisAnimeDiffusion_1-0v.ckpt\",\n",
         "    \"dreamlike-photoreal-2.0\":\"https://huggingface.co/dreamlike-art/dreamlike-photoreal-2.0/resolve/main/dreamlike-photoreal-2.0.safetensors\",\n",
         "    \"Cyberpunk-Anime-Diffusion\":\"https://huggingface.co/DGSpitzer/Cyberpunk-Anime-Diffusion/resolve/main/Cyberpunk-Anime-Diffusion.ckpt\",\n",
-        "    \"PlatDiffusionv1.3.1\":\"https://huggingface.co/p1atdev/pd-archive/resolve/main/plat-v1-3-1.safetensors\",\n",
+        "    \"Plat_Diffusion_v1.3.1\":\"https://huggingface.co/p1atdev/pd-archive/resolve/main/plat-v1-3-1.safetensors\",\n",
         "    \"ACertainThing\":\"https://huggingface.co/JosephusCheung/ACertainThing/resolve/main/ACertainThing.ckpt\",\n",
         "    \"past_mix\":\"https://huggingface.co/andite/past-mix/resolve/main/pastmix-better-vae-fp32.ckpt\",\n",
         "    \"Basil_mix_fixed\":\"https://huggingface.co/nuigurumi/basil_mix/resolve/main/Basil_mix_fixed.safetensors\",\n",
-        "    \"RealisticVisionV1.3\":\"https://civitai.com/api/download/models/6987\",\n",
+        "    \"Realistic_Vision_V1.3\":\"https://civitai.com/api/download/models/6987\",\n",
         "    \"SukiyakiMix-v1.0\":\"https://huggingface.co/Vsukiyaki/SukiyakiMix-v1.0/resolve/main/SukiyakiMix-v1.0-fp16.safetensors\",\n",
         "    \"7th_anime_v1.1\":\"https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v1/7th_anime_v1.1.safetensors\",\n",
         "    \"7th_anime_v2_A\":\"https://huggingface.co/syaimu/7th_Layer/resolve/main/7th_anime_v2/7th_anime_v2_A.safetensors\",\n",
