Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -134,7 +134,7 @@
         "    if model_url :\n",
         "        base_name = os.path.basename(model_url)\n",
         "        if model_url.startswith(\"https://drive.google.com\"):\n",
-        "            os.chdir(pretrained_model)\n",
+        "            os.chdir(/content/stable-diffusion-webui/models/Stable-diffusion)\n",
         "            !gdown --fuzzy {model_url}\n",
         "        elif model_url.startswith(\"https://huggingface.co/\"):\n",
         "            if \"/blob/\" in model_url:\n",
